feat: add internationalization support and translate content to English

--- a/app/blog/app-store-2025/page.mdx
+++ b/app/blog/app-store-2025/page.mdx
@@ -4,99 +4,99 @@
   caption="unsplash.com"
 />
 
-# App Store 2025: Yeni Nesil Uygulama Geliştirme ve Yayınlama Süreci
+# App Store 2025: Next-Generation App Development and Publishing Process
 
-2025 yılında App Store'a uygulama yükleme süreci, bugüne göre önemli değişiklikler içeriyor. Apple'ın yeni politikaları ve teknolojik gelişmeler, uygulama geliştiricileri için hem yeni fırsatlar hem de yeni zorluklar sunuyor.
-
----
-
-## Yeni Gereksinimler ve Standartlar
-
-2025'te App Store'a uygulama yüklemek için karşılaşacağınız temel değişiklikler:
-
-### 1. Gelişmiş Güvenlik Önlemleri
-
-- **Quantum Güvenlik Sertifikası**: Tüm uygulamalar için zorunlu hale gelen yeni güvenlik standardı
-- **Biometrik Doğrulama**: Kullanıcı verilerinin korunması için çok faktörlü kimlik doğrulama
-- **Şeffaf Veri Kullanımı**: Kullanıcı verilerinin nasıl kullanıldığına dair detaylı raporlama
-
-### 2. Yapay Zeka Entegrasyonu
-
-- **AI Etik Kuralları**: Yapay zeka kullanan uygulamalar için özel etik kuralları
-- **AI Performans Raporu**: Yapay zeka modellerinin performans ve adalet raporu
-- **Kullanıcı Etkileşimi İzleme**: AI sistemlerinin kullanıcı etkileşimlerini nasıl etkilediğinin raporlanması
-
-### 3. Sürdürülebilirlik Kriterleri
-
-- **Enerji Verimliliği Raporu**: Uygulamanın enerji tüketim analizi
-- **Karbon Ayak İzi**: Uygulamanın çevresel etkisinin ölçülmesi
-- **Sürdürülebilir Kaynak Kullanımı**: Sunucu ve depolama kaynaklarının verimli kullanımı
+The app submission process to the App Store in 2025 includes significant changes compared to today. Apple's new policies and technological developments present both new opportunities and challenges for app developers.
 
 ---
 
-## Yeni Geliştirme Araçları ve Teknolojiler
+## New Requirements and Standards
 
-2025'te uygulama geliştirme sürecinde kullanacağınız yeni araçlar:
+Key changes you'll encounter when submitting apps to the App Store in 2025:
 
-### 1. Swift 6.0 ve Yeni Özellikler
+### 1. Enhanced Security Measures
 
-- **Quantum Computing Desteği**: Karmaşık hesaplamalar için yeni API'ler
-- **Gelişmiş Concurrency**: Daha verimli eşzamanlı işlem yönetimi
-- **Yapay Zeka Framework'leri**: Yerleşik makine öğrenimi kütüphaneleri
+- **Quantum Security Certificate**: New mandatory security standard for all applications
+- **Biometric Authentication**: Multi-factor authentication for user data protection
+- **Transparent Data Usage**: Detailed reporting on how user data is utilized
+
+### 2. Artificial Intelligence Integration
+
+- **AI Ethics Guidelines**: Special ethical rules for applications using artificial intelligence
+- **AI Performance Report**: Performance and fairness report for AI models
+- **User Interaction Monitoring**: Reporting on how AI systems affect user interactions
+
+### 3. Sustainability Criteria
+
+- **Energy Efficiency Report**: Analysis of the app's energy consumption
+- **Carbon Footprint**: Measurement of the app's environmental impact
+- **Sustainable Resource Usage**: Efficient utilization of server and storage resources
+
+---
+
+## New Development Tools and Technologies
+
+New tools you'll use in the app development process in 2025:
+
+### 1. Swift 6.0 and New Features
+
+- **Quantum Computing Support**: New APIs for complex calculations
+- **Advanced Concurrency**: More efficient concurrent process management
+- **AI Frameworks**: Built-in machine learning libraries
 
 ### 2. Xcode 2025
 
-- **AI Asistanlı Kod Yazımı**: Yapay zeka destekli kod önerileri
-- **Otomatik Test Oluşturma**: Akıllı test senaryoları oluşturma
-- **Performans Optimizasyonu**: Gerçek zamanlı performans analizi
+- **AI-Assisted Coding**: AI-powered code suggestions
+- **Automatic Test Generation**: Intelligent test scenario creation
+- **Performance Optimization**: Real-time performance analysis
 
-### 3. Yeni Test ve Dağıtım Araçları
+### 3. New Testing and Distribution Tools
 
-- **TestFlight Pro**: Gelişmiş beta test özellikleri
-- **Otomatik Uyumluluk Testi**: Farklı cihazlarda otomatik test
-- **A/B Test Platformu**: Yerleşik A/B test araçları
-
----
-
-## Yayınlama Sürecindeki Değişiklikler
-
-### 1. Yeni İnceleme Süreci
-
-- **Otomatik Kod Analizi**: Yapay zeka destekli kod incelemesi
-- **Kullanıcı Deneyimi Değerlendirmesi**: Gelişmiş UX testleri
-- **Erişilebilirlik Kontrolü**: Kapsamlı erişilebilirlik denetimi
-
-### 2. Fiyatlandırma ve Gelir Modeli
-
-- **Dinamik Fiyatlandırma**: Coğrafi konuma göre otomatik fiyat ayarlama
-- **Yeni Abonelik Modelleri**: Kullanım bazlı abonelik seçenekleri
-- **Kripto Para Entegrasyonu**: Yerleşik kripto para ödeme sistemi
-
-### 3. Pazarlama ve Keşfedilebilirlik
-
-- **AI Destekli ASO**: Yapay zeka destekli App Store optimizasyonu
-- **Kişiselleştirilmiş Öneriler**: Kullanıcı bazlı uygulama önerileri
-- **Sosyal Entegrasyon**: Gelişmiş sosyal medya entegrasyonu
+- **TestFlight Pro**: Advanced beta testing features
+- **Automatic Compatibility Testing**: Automated testing across different devices
+- **A/B Testing Platform**: Built-in A/B testing tools
 
 ---
 
-## Başarılı Bir Uygulama İçin Öneriler
+## Changes in the Publishing Process
 
-1. **Erken Hazırlık**: Yeni gereksinimler için şimdiden planlama yapın
-2. **Sürekli Öğrenme**: Yeni teknolojileri ve standartları takip edin
-3. **Kullanıcı Odaklılık**: Kullanıcı deneyimini her zaman önceliklendirin
-4. **Sürdürülebilirlik**: Çevresel etkiyi minimize edin
-5. **Güvenlik**: En son güvenlik standartlarını uygulayın
+### 1. New Review Process
+
+- **Automatic Code Analysis**: AI-powered code review
+- **User Experience Assessment**: Advanced UX testing
+- **Accessibility Check**: Comprehensive accessibility audit
+
+### 2. Pricing and Revenue Model
+
+- **Dynamic Pricing**: Automatic price adjustment based on geographic location
+- **New Subscription Models**: Usage-based subscription options
+- **Cryptocurrency Integration**: Built-in cryptocurrency payment system
+
+### 3. Marketing and Discoverability
+
+- **AI-Powered ASO**: AI-assisted App Store optimization
+- **Personalized Recommendations**: User-based app recommendations
+- **Social Integration**: Enhanced social media integration
 
 ---
 
-### Sonuç
+## Recommendations for a Successful App
 
-2025'te App Store'a uygulama yükleme süreci, daha karmaşık ve kapsamlı hale gelecek. Ancak bu değişiklikler, daha güvenli, sürdürülebilir ve kullanıcı dostu uygulamalar geliştirmemize olanak sağlayacak. Şimdiden hazırlanmaya başlamak, gelecekte başarılı olmanın anahtarı olacak.
+1. **Early Preparation**: Start planning for new requirements now
+2. **Continuous Learning**: Keep up with new technologies and standards
+3. **User-Centric Approach**: Always prioritize user experience
+4. **Sustainability**: Minimize environmental impact
+5. **Security**: Implement the latest security standards
 
 ---
 
-### Kaynaklar ve İleri Okuma
+### Conclusion
+
+The app submission process to the App Store in 2025 will become more complex and comprehensive. However, these changes will enable us to develop more secure, sustainable, and user-friendly applications. Starting preparation now will be the key to success in the future.
+
+---
+
+### Resources and Further Reading
 
 - [Apple Developer Guidelines 2025](https://example.com/apple-guidelines-2025)
 - [Swift 6.0 Documentation](https://example.com/swift-6-docs)
@@ -104,6 +104,6 @@
 
 ---
 
-### İlham Veren Müzik
+### Inspiring Music
 
-Bu yazıyı yazarken dinlediğim müzik: _"Digital Dreams"_ by Future Sounds
+Music I listened to while writing this article: _"Digital Dreams"_ by Future Sounds
